--- a/src/components/homePage/homeModel.css
+++ b/src/components/homePage/homeModel.css
@@ -20,7 +20,7 @@
 .homePageModel .homePageModelLeft .homeageImg .homeImg {
   width: 400px;
   margin-top: 2px;
-  height: 250px;
+  height: 300px;
   position: relative;
 }
 .homePageModel .homePageModelLeft .homeageImg .homeImg #homeCanvas {
@@ -36,7 +36,7 @@
   left: 30%;
 }
 .homePageModel .homePageModelLeft .homeageImg .homeImg video {
-  width: 96%;
+  width: 98%;
   height: 100%;
   background-color: #142745;
   margin-left: 10px;
@@ -79,15 +79,36 @@
   width: 480px;
 }
 .homePageModel .homePageModelRight .sector {
-  background: #006FE4;
-  color: #fff;
+  color: #262d8d;
   padding: 4px 8px;
   margin: 0 4px;
   border-radius: 30px;
 }
+.homePageModel .homePageModelRight .sector .ant-switch-loading-icon,
+.homePageModel .homePageModelRight .sector .ant-switch::after {
+  width: 16px;
+  height: 16px;
+}
+.homePageModel .homePageModelRight .sector .ant-switch-checked {
+  height: 20px;
+}
 .homePageModel .homePageModelRight .deviceContext {
   padding: 10px;
   border: 2px solid #EEEEEE;
+}
+.homePageModel .homePageModelRight .deviceContext .devicetitle {
+  display: flex;
+  align-items: center;
+}
+.homePageModel .homePageModelRight .deviceContext .devicetitle .deviceBg {
+  display: inline-block;
+  width: 18px;
+  height: 16px;
+  background: url("../../style/ztt/imgs/alarmInfoBg.png") no-repeat;
+  background-size: 100% 100%;
+}
+.homePageModel .homePageModelRight .deviceContext .devicetitle .deviceFont {
+  color: #2c459a;
 }
 .homePageModel .homePageModelRight .deviceContext .sectorBtn {
   display: inline-block;
@@ -139,28 +160,29 @@
   padding-left: 10px;
 }
 .homePageModel .homePageModelRight .alarmImg {
-  display: flex;
-  flex-direction: row;
   margin-top: 12px;
   border: 1px solid #EEEEEE;
 }
-.homePageModel .homePageModelRight .alarmImg .alarBg {
-  width: 33%;
-  background-color: #fff;
-  margin: 8px 8px;
+.homePageModel .homePageModelRight .alarmImg .alarmSatus {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
-  border-right: 1px solid #EEEEEE;
+  padding: 1% 0 1% 4%;
 }
-.homePageModel .homePageModelRight .alarmImg .alarBg .policeImg {
-  width: 40px;
-  height: 40px;
+.homePageModel .homePageModelRight .alarmImg .alarmSatus .alarmSatusFont {
+  color: #274198;
+}
+.homePageModel .homePageModelRight .alarmImg .alarmSatus .alarmSatusBg {
+  display: inline-block;
+  width: 18px;
+  height: 16px;
+  background: url("../../style/ztt/imgs/alarmInfoBg.png") no-repeat;
+  background-size: 100% 100%;
 }
 .homePageModel .homePageModelRight .alarmImg .policeBtn {
-  width: 64%;
-  margin: 8px 3px;
+  width: 94%;
+  display: flex;
+  margin: 2% 4%;
+  border-radius: 4px;
 }
 .homePageModel .homePageModelRight .alarmImg .policeBtn .handler {
   color: #2a3394;
@@ -175,19 +197,19 @@
   border-left: 1px solid #e2e2e2;
 }
 .homePageModel .homePageModelRight .alarmImg .policeBtn Button {
-  width: 100%;
-  margin: 6px 0;
+  width: 26%;
 }
 .homePageModel .homePageModelRight .alarmImg .policeBtn Button:nth-child(1) {
-  background-color: #FF7200;
+  background-color: #fa390d;
   color: #fff;
   border: none;
   border-radius: 1px;
 }
 .homePageModel .homePageModelRight .alarmImg .policeBtn Button:nth-child(2) {
-  background-color: #B28750;
+  background-color: #ff7200;
   color: #fff;
   border: none;
   border-radius: 1px;
+  margin-left: 10%;
 }
 /*# sourceMappingURL=homeModel.css.map */
