--- a/src/components/police/ploceinfomation.less
+++ b/src/components/police/ploceinfomation.less
@@ -200,7 +200,8 @@
         cursor: pointer;
       }
       .anticon:hover{
-
+          color: #fff;
+          background-color: #2360db;
       }
     }
     .main-left{
@@ -603,6 +604,7 @@
         background-color: rgba(19,36,64,0.8);
         display: flex;
         align-items: center;
+        justify-content: space-between;
       }
     }
   }
