--- a/src/components/homePage/index.less
+++ b/src/components/homePage/index.less
@@ -60,7 +60,7 @@
       width: 22%;
       height: 74px;
       background: #fff;
-
+      color: #F83434;
       .equImg6 {
         display: inline-block;
         width: 46px;
@@ -80,23 +80,15 @@
         }
 
         .equipName {
-          color: #354D9D;
           font-weight: bold;
           font-size: 15px;
           padding-bottom: 4px;
         }
-
-        .equipTotal {
-          color: #385BD1;
-        }
-
         .equipTotal-today {
-          color: #FF7200;
           letter-spacing: 1px;
         }
       }
     }
-
     .equ {
       display: flex;
       justify-content: center;
@@ -105,26 +97,37 @@
       width: 15%;
       height: 74px;
       background: #fff;
-
+      .equColor1{
+        color:#375BD1;
+      }
+      .equColor2{
+        color:#37D142;
+      }
+      .equColor3{
+        color:#656A7B;
+      }
+      .equColor4{
+        color:#006CFF;
+      }
+      .equColor5{
+        color:#FF7200;
+      }
       .equContext {
         display: flex;
         flex-direction: column;
         padding-left: 26px;
-
         .equBer {
           font-size: 22px;
           padding-right: 2px;
         }
 
         .equipName {
-          color: #354D9D;
           font-size: 15px;
           font-weight: bolder;
           padding-bottom: 4px;
         }
 
         .equipTotal {
-          color: #385BD1;
           letter-spacing: 1px;
         }
 
@@ -134,7 +137,6 @@
         }
 
         .equipTotal-UHandle {
-          color: #656A7B;
           letter-spacing: 1px;
         }
       }
